# MemoryPool

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/TinyMemoryPool/: Config.h
src/internal/: Common.h  MemoryManager.cpp  MemoryManager.h  MemoryManagerImpl.cpp  MemoryManagerImpl.h  PlatformMemory.h  Pool.cpp  Pool.h
src/internal/backends/: PosixMemory.h  WindowsMemory.h
